resolved overflow and input margin on edit page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -462,6 +462,7 @@ hr.postseperator {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 15px;
 }
 
 @media (max-device-width: 480px), (max-width: 575px){
